compiler/testData/ir/interpreter/reference/javaPropertyReference.kt
// FILE: Main.kt
const konst name = <!EVALUATED: `SOME_PROPERTY`!>ClassWithProperty::SOME_PROPERTY.name<!>

// FILE: ClassWithProperty.java
public class ClassWithProperty {
    public boolean SOME_PROPERTY = false;
}
